feat(navigation): create component and use it

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,7 @@
 {
+    "navigation": {
+        "allProducts": "All products"
+    },
     "product": {
         "title" : "Audio-Technica ATH-MSR7",
         "subtitle": "2017 Best Headphones of the Year Award Winner"
