feat(AddToCart): create component and use

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -14,5 +14,10 @@
         "label": "colors",
         "black": "black",
         "brown": "brown"
+    },
+    "button": {
+        "addToCart": "Add to cart",
+        "loading": "Loading...",
+        "viewCart": "View cart"
     }
 }
