feat(AddToCart): show success message

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -19,5 +19,6 @@
         "addToCart": "Add to cart",
         "loading": "Loading...",
         "viewCart": "View cart"
-    }
+    },
+    "itemAdded": "Item added to cart!"
 }
